# AntGravityCLI

./: .env.example  .gitignore  README.md  config.py  console_io.py  handlers.py  i18n.py  interfaces.py  list_skills.py  main.py  parser.py  pyproject.toml  repl.py  requirements.txt  runner.py  test_cli.py
.github/workflows/: publish.yml  test.yml
antgravity_cli/: __init__.py  config.py  console_io.py  handlers.py  i18n.py  init_project.py  interfaces.py  list_skills.py  main.py  parser.py  repl.py  runner.py  subagents.py  utils.py  workspace_context.py
antgravity_cli/builtin/: __init__.py
antgravity_cli/builtin/commands/: __init__.py  ants.py  base.py  clear.py  config.py  disable_agent.py  disable_skill.py  enable_agent.py  enable_skill.py  exit.py  help.py  history.py  load.py  reload.py  reset.py  save.py
antgravity_cli/console_io/: __init__.py  completer.py  reader.py  writer.py
antgravity_cli/parser/: __init__.py  file_processor.py  preprocessor.py  skill_processor.py
antgravity_cli/translate/en-us/: commands.json  config.json  console_io.json  handlers.json  init_project.json  list_skills.json  parser.json  repl.json  runner.json
antgravity_cli/translate/pt-br/: commands.json  init_project.json  list_skills.json  parser.json  (+2 more)
tests/: __init__.py  test_commands.py  test_config.py  test_main.py  test_new_features.py  test_parser.py  test_repl.py  test_subagents.py  test_utils_i18n.py
translate/en-us/: list_skills.json  parser.json  repl.json
translate/pt-br/: config.json  console_io.json  handlers.json  list_skills.json  parser.json  repl.json
(+6 files in other folders)
